# gcs-infrastructure

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  rabbitmq_xbee_test.py  requirements.txt  xbee_test.py
Application/: GCSXBee.py  InfrastructureInterface.py  InfratsructureInterface.py  __init__.py
Application/Infrastructure/: GCSXBee.py  InfrastructureInterface.py  PacketQueue.py  VehicleXBee.py  __init__.py
Application/gcs_infrastructure.egg-info/: PKG-INFO  SOURCES.txt
Commands/: CommandResponse.py  Commands_GCS.py  EmergencyStop.py  test.py
Commands/Interfaces/: CommandInterface.py
Communication/: NOTES.md  README.md  Telemetry.py  XBee.py  test_receive.py  test_receive_polling.py  test_transmit.py
Communication/TestingXbees/: receive.py  send.py
Communication/XBee/: README.md  XBee.py
Demo/: Demo.md  GCS.py  Requirements.md  telemetry_test.py  vehicle.py
FPV/: fpv_combined.py
Logger/: Logger.py  test.py
Logs/: log0.txt  log1.txt  log11.txt  log13.txt  log15.txt  log17.txt  log19.txt  log3.txt  log4.txt  log5.txt  log7.txt  log9.txt
Packet/: README.md
Packet/Command/: KeepIn.py  (+7 more)
TestScripts/: AT_Command_List.txt  CommandTransmitTest.py  GCSTest.py  TelemetryTransmitTest.py  VehicleTest.py  serial_transmit_test.py
UGV-Manual-Control/: Testing.py  ugv_manual_control.py  ugv_manual_control_listener.py
docs/: TECHNICAL_WORKFLOW_DETAILED.md  WORKFLOW_PDR_BRIEF.md  full-lifecycle.md  run-commands.md  xsens-gcs-full-process-reference.md  xsens-to-gcs-code-explained.md
old_test_scripts/: xbee_receive.py
src/ugv_msgs/: CMakeLists.txt  package.xml
src/ugv_msgs/msg/: AutoCtrl.msg  ManCtrl.msg  UGVTelemetry.msg
src/ugv_telemetry/: package.xml  setup.cfg  setup.py
src/ugv_telemetry/launch/: ugv_telemetry.launch.py
src/ugv_telemetry/ugv_telemetry/: gcs_telemetry_sender.py  gcs_udp_listener.py  gcs_xbee_listener.py  gcs_xbee_sender.py  xsens_data_conversion.py
src/ugv_teleop/: package.xml  setup.cfg  setup.py
src/ugv_teleop/launch/: ugv_control.launch.py
src/ugv_teleop/ugv_teleop/: ugv_arm.py  ugv_control_pub.py  ugv_control_sub.py
xbee-env/: pyvenv.cfg
xbee_test_scripts/: CommandTransmitTest.py  TelemetryTest.py  TelemetryTransmitTest.py  gcs.py  gcs_test.py  gcs_test2.py  rabbitmq_xbee_test.py  serial_receive_test.py  serial_test.py  serial_transmit_test.py  telemetry_retrive.py  telemetry_transmit.py  temp.py  test.py  transmit_test.py  vehicle.py  xbee_test.py
(+461 files in other folders)
