[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-infrastructure"
version = "0.1.0"
description = "GCS Infrastructure Interface and Tests"
requires-python = ">=3.8"

authors = [
    { name = "Aidan Sanders" },
    { name = "Joshua Ho" }
]

dependencies = [
  "python-dotenv==1.2.1"
]

[tool.setuptools.packages.find]
where = ["Application"]