<?xml version="1.0"?>
<package format="3">
  <name>ugv_telemetry</name>
  <version>0.0.0</version>
  <description>Xsens telemetry conversion node for UGV GCS</description>

  <maintainer email="todo@todo.com">ugv</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ugv_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
